# TEST.Django-payment-service

./: .pre-commit-config.yaml  Dockerfile  README.md  config.py  logger.py  pyproject.toml
app/: settings.py  urls.py
deploy/: .env  docker-compose.yaml  nginx.conf
main/infrastructure/: interfaces.py
payment/: models.py  urls.py
payment/application/use_cases/: get_organization.py  handle_payment.py
payment/domain/: aggregates.py  dto.py  entities.py  exceptions.py  interfaces.py
payment/domain/services/: payment_service.py
payment/infrastructure/: interfaces.py  repositories.py
payment/infrastructure/uow/: impl.py  interfaces.py  utils.py
payment/migrations/: 0001_initial.py  0002_alter_organizationmodel_inn.py  0003_alter_organizationmodel_inn.py  0004_alter_organizationmodel_balance_and_more.py  0005_alter_documentmodel_number_and_more.py
payment/presentation/: serializers.py  views.py
